# iphone-backup

./: .gitignore  Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml  release.yml
config/: Caddyfile.snippet  adguard-dns-rewrite.md  com.user.iphone-backup.plist
docker/: .env.example  Dockerfile  docker-compose.yml
scripts/: entrypoint.sh  ibackup.sh  restore.sh  setup.sh  upload_server.py
src/: backup.rs  config.rs  device.rs  imd.rs  launchd.rs  main.rs  notify.rs  pid.rs  preflight.rs  restore.rs  retention.rs  status.rs  update.rs  verify.rs
src/tui/: cat.rs  mod.rs  ui.rs
tests/: backup_fake_imd.rs
www/: dashboard.html  upload.html
