[package]
name = "iphone-backup"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "iphone-backup"
path = "src/main.rs"

[dependencies]
anyhow      = "1"
chrono      = { version = "0.4", features = ["serde"] }
clap        = { version = "4",   features = ["derive"] }
crossterm   = "0.28"
dirs        = "5"
ratatui     = "0.28"
serde       = { version = "1",   features = ["derive"] }
serde_json  = "1"
toml        = "0.8"
